# opengl-boilerplate

./: CMakeLists.txt  Makefile  README.md  callbacks.c  callbacks.h  main.c  main.h
